--- a/Cliente/css/estilos.css
+++ b/Cliente/css/estilos.css
@@ -5,7 +5,7 @@
 
 .name-app{
     font-family: 'Ananda Personal Use';
-    font-size: xx-large;
+    font-size: x-large;
     color: rgb(255, 255, 255);
     text-decoration: none;
     text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.8);
