--- a/Cliente/css/estilos.css
+++ b/Cliente/css/estilos.css
@@ -5,11 +5,16 @@
 
 .name-app{
     font-family: 'Ananda Personal Use';
-    font-size: x-large;
+    font-size: xx-large;
     color: rgb(255, 255, 255);
     text-decoration: none;
     text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.8);
     -webkit-text-stroke: .3px rgb(29, 224, 150);
+    margin: 10px;
+}
+
+img{
+    height: 600px;
 }
 
 .nav-estilos{
@@ -40,7 +45,7 @@
     box-shadow: 10px 0px 8px rgb(0, 0, 0);
 }
 
-body{
+.secundario-estilos{
     background-color: rgb(10, 148, 95);
 }
 
@@ -49,7 +54,8 @@ body{
 }
 
 .logo{
-    width: 40%;
+    width: 30%;
+    height: 60%;
     border-radius: 20px;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
 }
@@ -71,41 +77,35 @@ body{
     font-family: 'Ananda Personal Use';
     font-size: xx-large;
     color: rgb(255, 255, 255);
-    margin-top: 10%;
+    margin-top: 5%;
     text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.8);
     -webkit-text-stroke: .3px rgb(59, 255, 180);
 }
 
-@media (max-width: 576px) {
-    body{
-        
-        background-image: url("../img/backgroundCliente.jpg");
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-    }
+.estilos-form{
+    width: 50%;
+}
 
-    .imgManos{
+.contenedor-estilos{
+    padding: 15px;
+    color: rgb(255, 255, 255);
+    box-sizing: border-box;
+}
+
+.form-estilos{
+    border-radius: 10px;
+    padding: 20px 5px 20px 5px;
+    background-color: rgb(224, 63, 29);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.8);
+}
+
+@media (max-width: 425px) { 
+    .text-estilos{
+        font-size: small;
+    }
+    
+    .span-hide{
         display: none;
-    }
-
-    .logo{
-        display: none;
-    }
-
-    .titulo{
-        display: none;
-    }
-
-    .secundario{
-        display: none;
-    }
-
-    .principal{
-        display: none;
-    }
-
-    .nav-estilos{
-        height: 70vh;
     }
 }
