--- a/Cliente/css/estilos.css
+++ b/Cliente/css/estilos.css
@@ -100,6 +100,11 @@ img{
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.8);
 }
 
+.carousel-estilos{
+    border-radius: 5px;
+    box-shadow: 1px 1px 10px gray;
+}
+
 @media (max-width: 425px) { 
     .text-estilos{
         font-size: small;
